Navbar is now static, removed hamburger bar for redundancy, need to fix overflow on top of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   background-color: #f3e1fc;
   box-sizing: border-box;
   width: 100%;
+  position: fixed;
 }
 
 .logo {
